--- a/meet-landing-page/scss/base/_typography.scss
+++ b/meet-landing-page/scss/base/_typography.scss
@@ -3,9 +3,9 @@
 
 // Base typography styles
 body {
-  font-family: 'Red Hat Display', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-family: $font-family-primary;
+  font-size: $fluid-body;
+  line-height: $line-height-150;
   color: $color-slate-900;
 }
 
@@ -14,54 +14,43 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $font-weight-black;
 }
 
-// Text presets from style guide
+// Text presets using fluid typography
 .text-preset {
-  font-family: 'Red Hat Display', sans-serif;
+  font-family: $font-family-primary;
 
   &-1 {
-    font-weight: 900; // Black
-    font-size: 64px;
-    line-height: 110%;
-    letter-spacing: 0;
+    font-weight: $font-weight-black;
+    font-size: $fluid-heading-1;
+    line-height: $line-height-110;
+    letter-spacing: $letter-spacing-0;
   }
 
   &-2 {
-    font-weight: 900; // Black
-    font-size: 40px;
-    line-height: 110%;
-    letter-spacing: 0;
+    font-weight: $font-weight-black;
+    font-size: $fluid-heading-2;
+    line-height: $line-height-110;
+    letter-spacing: $letter-spacing-0;
   }
 
   &-3 {
-    font-weight: 900; // Black
-    font-size: 16px;
-    line-height: 110%;
-    letter-spacing: 4px;
+    font-weight: $font-weight-black;
+    font-size: $fluid-small;
+    line-height: $line-height-110;
+    letter-spacing: $letter-spacing-4;
     text-transform: uppercase;
   }
 
   &-4 {
-    font-weight: 500; // Medium
-    font-size: 18px;
-    line-height: 170%;
-    letter-spacing: 0;
+    font-weight: $font-weight-medium;
+    font-size: $fluid-body;
+    line-height: $line-height-170;
+    letter-spacing: $letter-spacing-0;
   }
 
   &-5 {
-    font-weight: 900; // Black
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0;
-  }
-}
-
-// Responsive adjustments
-@include respond-to(mobile) {
-  .text-preset-1 {
-    font-size: 40px;
-  }
-  
-  .text-preset-2 {
-    font-size: $font-size-3;
+    font-weight: $font-weight-black;
+    font-size: $fluid-small;
+    line-height: $line-height-150;
+    letter-spacing: $letter-spacing-0;
   }
 }
