--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -2,13 +2,17 @@
 @use '../abstracts/mixins' as *;
 
 .hero {
-  margin-top: $spacing-800;
-  margin-bottom: $spacing-1400;
+  margin-block: $spacing-800 $spacing-1400;
 
   .container {
     @include container;
     
-    @media (min-width: $breakpoint-desktop) {
+    @include break-up(lg) {
+      max-width: 100%;
+      padding: 0;
+    }
+
+    @include break-up(2xl) {
       max-width: 100%;
       padding: 0;
     }
@@ -16,107 +20,115 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: $spacing-400;
-    margin-bottom: $spacing-800;
+    grid-template-columns: repeat(2, 1fr);
+    gap: $spacing-100;
+    margin-block-end: $spacing-800;
     align-items: center;
 
-    @media (min-width: $breakpoint-desktop) {
-      grid-template-columns: 1fr minmax(auto, 448px) 1fr;
-      gap: 127px;
-
-      .hero__image--left {
-        width: 100%;
-        height: auto;
-        margin-top: -57px;
-      }
-
-      .hero__image--right {
-        width: 100%;
-        height: auto;
-      }
+    .hero__image--left,
+    .hero__image--right {
+      width: 100%;
+      height: auto;
     }
 
-    @include respond-to(tablet) {
-      grid-template-columns: repeat(2, 1fr);
-      gap: $spacing-100;
-
-      .hero__content {
-        grid-column: 1 / -1;
-        grid-row: 2;
-        order: -1;
-        margin-top: $spacing-900;
-      }
-
-      .hero__image--left {
-        grid-column: 1;
-        grid-row: 1;
-      }
-
-      .hero__image--right {
-        grid-column: 2;
-        grid-row: 1;
-      }
+    // Mobile first - stacked layout
+    .hero__content {
+      grid-column: 1 / -1;
+      grid-row: 2;
+      margin-block-start: $spacing-600;
     }
 
-    @include respond-to(mobile) {
-      grid-template-columns: repeat(2, 1fr);
-      gap: $spacing-100;
+    // Tablet improvements
+    @include break-up(md) {
+      gap: $spacing-400;
       
-      .hero__image--left,
-      .hero__image--right {
-        width: 100%;
-        height: auto;
+      .hero__content {
+        margin-block-start: $spacing-900;
       }
+    }
 
+    // Desktop layout - 3 column horizontal
+    @include break-up(lg) {
+      grid-template-columns: 1fr minmax(auto, 28rem) 1fr;
+      gap: $spacing-800;
+      
       .hero__image--left {
         grid-column: 1;
         grid-row: 1;
+        justify-self: end;
       }
-
-      .hero__image--right {
+      
+      .hero__content {
         grid-column: 2;
         grid-row: 1;
+        margin-block-start: 0;
       }
+      
+      .hero__image--right {
+        grid-column: 3;
+        grid-row: 1;
+        justify-self: start;
+      }
+    }
 
+    @include break-up(2xl) {
+      grid-template-columns: 1fr minmax(auto, 33.75rem) 1fr;
+      gap: 7.94rem; // 127px for precise spacing
+      margin-inline: -$spacing-200;
+      
+      .hero__image--left {
+        grid-column: 1;
+        grid-row: 1;
+        justify-self: end;
+        margin-block-start: -3.56rem; // -57px offset for vertical alignment
+      }
+      
       .hero__content {
-        grid-column: 1 / -1;
-        grid-row: 2;
-        margin-top: $spacing-600;
+        grid-column: 2;
+        grid-row: 1;
+        margin-block-start: 0;
+        padding-inline: 0;
+      }
+      
+      .hero__image--right {
+        grid-column: 3;
+        grid-row: 1;
+        justify-self: start;
       }
     }
   }
 
   &__content {
     text-align: center;
-    max-width: 448px;
-    margin: 0 auto;
+    padding-inline: $spacing-200;
+    margin-inline: auto;
+    max-width: 100%;
 
-    @include respond-to(tablet) {
-      max-width: 448px;
+    @include break-up(md) {
+      max-width: 28rem;
+      padding-inline: 0;
     }
 
-    @include respond-to(mobile) {
-      max-width: 100%;
-      padding: 0 $spacing-200;
+    @include break-up(2xl) {
+      max-width: 33.75rem; // 540px for optimal width
     }
   }
 
   &__title {
     @include heading-1;
-    margin-bottom: $spacing-300;
+    margin-block-end: $spacing-300;
   }
 
   &__description {
-    font-size: $font-size-4;
+    font-size: $fluid-body;
     line-height: $line-height-170;
     color: $color-slate-600;
-    margin-bottom: $spacing-400;
+    margin-block-end: $spacing-400;
   }
 }
 
 .features {
-  margin-bottom: $spacing-1400;
+  margin-block-end: $spacing-1400;
 
   .container {
     @include container;
@@ -124,52 +136,47 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: $spacing-300;
-    margin-bottom: $spacing-800;
+    margin-block-end: $spacing-800;
 
-    @include respond-to(tablet) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include respond-to(mobile) {
-      grid-template-columns: repeat(2, 1fr);
+    @include break-up(lg) {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 
   &__content {
     text-align: center;
-    max-width: 540px;
-    margin: 0 auto;
+    max-width: min(100%, 33.75rem);
+    margin-inline: auto;
   }
 
   &__title {
     @include heading-2;
-    margin-bottom: $spacing-300;
-    max-width: 82%; // Changed from fixed 445px to percentage
-    margin-left: auto;
-    margin-right: auto;
+    margin-block-end: $spacing-300;
+    max-width: 100%;
+    margin-inline: auto;
 
-    @include respond-to(tablet) {
+    @include break-up(md) {
       max-width: 90%;
     }
 
-    @include respond-to(mobile) {
-      max-width: 100%;
+    @include break-up(lg) {
+      max-width: 82%;
     }
   }
 
   &__subtitle {
     display: block;
-    font-size: $font-size-3;
+    font-size: $fluid-small;
     letter-spacing: $letter-spacing-4;
     color: $color-cyan-600;
-    margin-bottom: $spacing-200;
+    margin-block-end: $spacing-200;
     text-transform: uppercase;
   }
 
   &__description {
-    font-size: $font-size-4;
+    font-size: $fluid-body;
     line-height: $line-height-170;
     color: $color-slate-600;
   }
@@ -178,13 +185,13 @@
 .cta {
   position: relative;
   color: $color-white;
-
+  
   &__background {
     position: relative;
     
     img {
       width: 100%;
-      height: 400px;
+      height: 25rem;
       object-fit: cover;
     }
   }
@@ -199,32 +206,33 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    padding: $spacing-800 0;
-    max-width: 1110px;
-    margin: 0 auto;
+    padding-block: $spacing-500;
+    padding-inline: $spacing-200;
+    max-width: min(100%, 69.375rem);
+    margin-inline: auto;
 
-    @include respond-to(mobile) {
-      padding: $spacing-500 $spacing-200;
+    @include break-up(md) {
+      padding-block: $spacing-800;
+      padding-inline: 0;
     }
   }
 
   &__title {
     @include heading-2;
-    margin-bottom: $spacing-300;
+    margin-block-end: $spacing-300;
   }
 
   &__description {
-    font-size: $font-size-4;
+    font-size: $fluid-body;
     line-height: $line-height-170;
-    margin-bottom: $spacing-400;
-    max-width: 350px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-block-end: $spacing-400;
+    max-width: min(100%, 21.875rem);
+    margin-inline: auto;
   }
 }
 
 .footer-cta {
-  margin-bottom: -92px;
+  margin-block-end: -5.75rem;
   position: relative;
   z-index: 2;
 }
@@ -234,18 +242,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: $spacing-800 0;
+  margin-block: $spacing-800;
 
   &__line {
     width: 1px;
-    height: 84px;
+    height: 5.25rem;
     background-color: $color-slate-600;
     border: none;
   }
 
   &__number {
-    width: 56px;
-    height: 56px;
+    width: 3.5rem;
+    height: 3.5rem;
     @include flex-center;
     background-color: $color-white;
     border: 1px solid $color-slate-300;
