--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -31,64 +31,53 @@
     position: relative;
     z-index: 1;
     @include container;
-    padding: $spacing-800;
+    padding-block: $spacing-600;
+    padding-inline: $spacing-300;
 
-    @media (min-width: $breakpoint-desktop) {
+    @include break-up(lg) {
       padding-inline: 0;
     }
   }
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: $spacing-400;
+    grid-template-columns: 1fr;
+    gap: $spacing-300;
+    text-align: center;
     align-items: center;
-    padding: $spacing-800 0;
-    max-width: 1280px;
-    margin: 0 auto;
+    max-width: $container-max-width;
+    margin-inline: auto;
 
-    @include respond-to(tablet) {
-      grid-template-columns: 1fr;
-      text-align: center;
-      gap: $spacing-300;
-      padding: $spacing-600 $spacing-300;
+    @include break-up(md) {
+      gap: $spacing-400;
+      padding-block: $spacing-800;
     }
 
-    @include respond-to(mobile) {
-      grid-template-columns: 1fr;
-      text-align: center;
-      gap: $spacing-300;
-      padding: $spacing-600 $spacing-300;
+    @include break-up(lg) {
+      grid-template-columns: repeat(3, 1fr);
+      text-align: left;
     }
   }
 
   &__title {
     @include heading-2;
 
-    @include respond-to(tablet) {
-      margin-bottom: $spacing-300;
+    @include break-up(md) {
+      margin-block-end: $spacing-300;
     }
 
-    @include respond-to(mobile) {
-      margin-bottom: $spacing-300;
+    @include break-up(lg) {
+      margin-block-end: 0;
     }
   }
 
   &__description {
-    font-size: $font-size-4;
+    font-size: $fluid-body;
   }
 
   &__cta {
-    justify-self: end;
-
-    @include respond-to(tablet) {
-      justify-self: center;
-      margin-top: $spacing-300;
-    }
-
-    @include respond-to(mobile) {
-      justify-self: center;
-      margin-top: $spacing-300;
+    @include break-up(lg) {
+      justify-self: end;
     }
   }
 }
