style(layout): 🎨 reduce max-width for hero section for better fit

--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -110,7 +110,7 @@
     }
 
     @include break-up(2xl) {
-      max-width: 33.75rem; // 540px for optimal width
+      max-width: 28rem;
     }
   }
 
